<resources>
    <string name="app_name">MeroSayatri</string>
    <string name="register">Register</string>
    <string name="enter_your_full_name">Enter Username</string>
    <string name="register1">Register</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">LogIn</string>
    <string name="name_or_email">Name or Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login1">LogIn</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="signup">SignUp</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>